[project]
name = "mongodb-vector-search"
version = "0.1.0"
description = "Learning MongoDB Vector Search with Airbnb dataset"
requires-python = ">=3.9"
dependencies = [
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "pymongo>=4.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "llmlingua>=0.2.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []  # No Python modules - this is a notebook project
